...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qsa-S7-BO0">
                                        <rect key="frame" x="152.66666666666666" y="118" width="108.99999999999997" height="30"/>
                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="109" id="00K-dv-gwC"/>
                                        </constraints>
                                        <state key="normal" title="Single Player">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="layer.borderWidth" value="0.5"/>
                                            <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="10"/>
                                        </userDefinedRuntimeAttributes>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z53-GK-iWb">
                                        <rect key="frame" x="161" y="49" width="92" height="30"/>
                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="92" id="6JJ-fl-52d"/>
                                        </constraints>
                                        <state key="normal" title="Multiplayer">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="layer.borderWidth" value="0.5"/>
                                            <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="10"/>
                                        </userDefinedRuntimeAttributes>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="buN-sc-6wU">
                                        <rect key="frame" x="313.33333333333326" y="84.666666666666686" width="82.666666666666686" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="handSizeText">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="85Y-la-wLY">
                                        <rect key="frame" x="165.66666666666666" y="140" width="82.666666666666657" height="30"/>
                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Play">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="layer.borderWidth" value="0.5"/>
                                            <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="10"/>
                                        </userDefinedRuntimeAttributes>
...
                            </view>
                            <view contentMode="scaleToFill" restorationIdentifier="Deck View" translatesAutoresizingMaskIntoConstraints="NO" id="9to-dJ-6ue" userLabel="Deck View">
                                <rect key="frame" x="331.33333333333331" y="48.666666666666657" width="82.666666666666686" height="116"/>
                                <subviews>
                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backOfCard" translatesAutoresizingMaskIntoConstraints="NO" id="YE1-y4-Dd4" userLabel="Deck Image 3">
                                        <rect key="frame" x="0.0" y="8" width="82.666666666666671" height="104.33333333333333"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Deck">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <gestureRecognizers/>
                                    </imageView>
                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backOfCard" translatesAutoresizingMaskIntoConstraints="NO" id="7Ws-UG-hOO" userLabel="Deck Image 2">
                                        <rect key="frame" x="0.0" y="4" width="82.666666666666671" height="104.33333333333333"/>
...
